<resources>
    <string name="app_name">App Guru</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_description">Silakan masukan data akun anda untuk melanjutkan</string>
    <string name="nip_email">NIP / Email</string>
    <string name="password">Password</string>
    <string name="login_illustration">Login Illustration</string>
    <string name="kelas_yang_ada">Kelas yang ada</string>
    <string name="tugas_yang_sudah_dibuat">Tugas yang sudah dibuat</string>
    <string name="murid">Murid</string>
    <string name="tugas">Tugas</string>
    <string name="raport">Raport</string>
    <string name="murid_description">Tambahkan murid pada kelas untuk mulai mengajar</string>
    <string name="nomor_induk_siswa">Nomor Induk Siswa</string>
    <string name="email">Email</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="agama">Agama</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="telepon">Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="daftar">Daftar</string>
    <string name="selesai">Selesai</string>
    <string name="semester_1">Semester 1</string>
    <string name="semester_2">Semester 2</string>
    <string name="bm">BM</string>
    <string name="mm">MM</string>
    <string name="bsh">BSH</string>
    <string name="bsb">BSB</string>
    <string name="tambah">Tambah</string>
    <string name="bagian_yang_sudah_dibuat">Bagian yang sudah dibuat</string>
    <string name="soal_yang_sudah_dibuat">Soal yang sudah dibuat</string>
    <string name="bagian">Bagian</string>
    <string name="bagian_description">Tambahkan bagian-bagian dari tugas agar lebih terstruktur</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="judul">Judul</string>
    <string name="tugas_description">Tambahkan tugas untuk mengetahui kemampuan anak</string>
    <string name="soal">Soal</string>
    <string name="soal_description">Tambahkan soal untuk mengetahui perkembangan anak</string>
    <string name="pilihan">Pilihan</string>
    <string name="tambah_pilihan">Tambah Pilihan</string>
    <string name="kelas">Kelas</string>
    <string name="kelas_description">Tambahkan kelas dan murid untuk memulai kegiatan belajar</string>
    <string name="nama_kelas">Nama Kelas</string>
    <string name="tambah_murid">Tambah Murid</string>
    <string name="murid_yang_sudah_mengumpulkan_tugas">Murid yang sudah mengumpulkan tugas</string>
    <string name="tambah_kelas">Tambah Kelas</string>
    <string name="tambah_tugas">Tambah Tugas</string>
    <string name="tambah_bagian">Tambah Bagian</string>
    <string name="tambah_soal">Tambah Soal</string>
    <string name="pilihan_jawaban">Pilihan Jawaban</string>
    <string name="nilai">Nilai</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="list_bagian">List Bagian</string>
    <string name="tugas_dikumpul">Tugas Dikumpul</string>
    <string name="ui_avatar">https://ui-avatars.com/api/?name=%1$s&amp;size=128&amp;rounded=true&amp;background=4A5DFF&amp;color=FFFFFF&amp;format=png</string>
    <string name="raport_description">Berikan penilaian untuk mengetahui hasil perkembangan murid</string>
    <string name="semester">Semester</string>
    <string name="indikator_raport">Indikator Raport</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="isi_raport">Isi Raport</string>
    <string name="image_certificate">Image Certificate</string>
    <string name="sertifikat">Sertifikat</string>
    <string name="icon_camera">Icon Camera</string>
    <string name="choose_file">Choose File</string>
    <string name="icon_folder">Icon Folder</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="permission_error">Harap berikan izin untuk melanjutkan</string>
    <string name="raport_cancel">Batal Isi Raport?</string>
    <string name="kesimpulan">Kesimpulan</string>
    <string name="kirim">Kirim</string>
    <string name="total_nilai">Total Nilai :</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="edit_kelas">Edit Kelas</string>
    <string name="edit_tugas">Edit Tugas</string>
    <string name="edit_bagian">Edit Bagian</string>
    <string name="edit_soal">Edit Soal</string>
    <string name="daftar_murid">Daftar Murid</string>
    <string name="murid_pada_kelas_ini">Murid pada kelas ini</string>
    <string name="edit_murid">Edit Murid</string>
</resources>